# fame

./: .gitlab-ci.yml  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-container.yml  release.yml  test.yml
fame/: __init__.py  __main__.py  fame3  fame3_model.py  resources.py
fame/data/: nerdd.yml
tests/: steps.py  test_valid_predictions.py
tests/features/: consistent_predictions.feature  valid_predictions.feature
