[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fame"
version = "3.1.2"
description = "FAME 3: Prediction of Phase 1 and Phase 2 Sites of Metabolism (SoMs)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Martin Šícho" },
    { name = "Axinya Tokareva" },
    { name = "Steffen Hirte", email = "steffen.hirte@univie.ac.at" },
]
maintainers = [
    { name = "Johannes Kirchmair", email = "johannes.kirchmair@univie.ac.at" },
]
requires-python = ">=3.9"
dependencies = [
    "rdkit==2020.09.1",
    "pandas~=1.2.1",
    "sh~=1.14.3",
    "nerdd-module>=0.3.34",
    "platformdirs>=4",
    "importlib-resources>=5; python_version<'3.9'",
    "importlib_metadata>=4.6; python_version<'3.10'",
]

[project.urls]
Repository = "https://github.com/molinfo-vienna/fame"

[project.optional-dependencies]
dev = ["mypy", "ruff"]
test = [
    "pytest",
    "pytest-watch",
    "pytest-cov",
    "pytest-bdd==7.3.0",
    "hypothesis",
    "hypothesis-rdkit",
]

[project.scripts]
fame3 = "fame.__main__:main"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_vcs_release = true
